Fix name and handle overlap.

--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -31,3 +31,18 @@
     border-radius: 0;  
   }
 }
+
+@media only screen and (max-width: 1024px) {
+  article.tweet header {
+    padding-right: 0;
+  }
+  
+  article.tweet header > div {
+    flex-direction: column;
+  }
+  
+  article.tweet header > div {
+    display: inherit;
+    align-items: flex-end;
+  }
+}
